# lab8_po

./: docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml  pyrightconfig.json
backend/src/: main.py
backend/src/core/: config.py  db_config.py
backend/src/db/: db_service.py  init_db.py  models.py
frontend/: package-lock.json  repomix-output.txt
frontend/src/: App.jsx
frontend/src/pages/: Home.jsx  Login.jsx  MainPage.jsx  Registration.jsx
frontend/src/pages/accountant/: BreakevenPoint.jsx  CategoryTurnover.jsx  EmployeeSalary.jsx  PaymentTypeSales.jsx  ProfitLoss.jsx  Taxes.jsx  TotalTurnover.jsx
frontend/src/pages/admin/: FormStats.jsx  RegisterEmployee.jsx  ReportsAccountant.jsx  ReportsCustomers.jsx  ReportsSales.jsx  ReportsSupplies.jsx
frontend/src/pages/customer/: CancelOrder.jsx  CustomerOrders.jsx  CustomerPriceList.jsx  Discounts.jsx  OrderDetails.jsx  PayOrders.jsx
frontend/src/pages/sales/: ClientDebts.jsx  ClientSales.jsx  EditOrder.jsx  Orders.jsx  PriceList.jsx  ProductSales.jsx  ProductStock.jsx
frontend/src/pages/supplies/: CreateSupply.jsx  EditSupply.jsx  PaySupply.jsx  SuppliersDebt.jsx  WarehouseProducts.jsx  Warehouses.jsx
